<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

<!--    <Button-->
<!--        android:id="@+id/playvideo_btn1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Play Video One"-->
<!--        android:layout_gravity="center"></Button>-->


    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:id="@+id/iconbar">

            <ImageView
                android:id="@+id/icon"
                android:background="@drawable/icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="5"

                />


            <TextView
                android:id="@+id/username2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"

                android:layout_weight="90"
                android:gravity="start"
                android:paddingLeft="10dp"
                android:text="Kra !"


                android:textStyle="bold" />

            <Button
                android:id="@+id/switcher"
                android:layout_width="65dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/cambodia"
                android:clickable="true"


                />


        </LinearLayout>





        <LinearLayout

            android:id="@+id/piclayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/forecast"
                android:clickable="true"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/forecastTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/forecastText"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"

                    />


                <Button
                    android:id="@+id/forecastSound"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_volume_up_black_24dp"
                    android:clickable="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >


    <!--                //ML part-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ml"
                        android:clickable="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:id="@+id/healthTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/healthText"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            />

                        <Button
                            android:id="@+id/healthSound"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/ic_volume_up_black_24dp"
                            android:clickable="true" />


                    </LinearLayout>


                </LinearLayout>


    <!--                //Other part-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/other"
                        android:clickable="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:id="@+id/otherTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"

                            android:text="@string/otherText"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            />


                        <Button
                            android:id="@+id/otherSound"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="0dp"
                            android:background="@drawable/ic_volume_up_black_24dp"
                            android:clickable="true" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


            <ListView

                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"




                >

            </ListView>


        </LinearLayout>


    </LinearLayout>







</RelativeLayout>